/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2023 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2023 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/

package org.opennms.horizon.inventory.service.taskset.publiser;

import com.google.protobuf.InvalidProtocolBufferException;
import org.junit.jupiter.api.AfterEach;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.extension.ExtendWith;
import org.mockito.ArgumentCaptor;
import org.mockito.Captor;
import org.mockito.InjectMocks;
import org.mockito.Mock;
import org.mockito.junit.jupiter.MockitoExtension;
import org.opennms.horizon.inventory.model.IpInterface;
import org.opennms.horizon.inventory.model.node.DefaultNode;
import org.opennms.horizon.inventory.model.node.Node;
import org.opennms.horizon.inventory.service.SnmpConfigService;
import org.opennms.horizon.inventory.service.taskset.ScannerTaskSetService;
import org.opennms.horizon.inventory.service.taskset.publisher.TaskSetPublisher;
import org.opennms.horizon.shared.utils.InetAddressUtils;
import org.opennms.node.scan.contract.NodeScanRequest;
import org.opennms.taskset.contract.TaskDefinition;

import java.util.List;

import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
import static org.mockito.ArgumentMatchers.eq;
import static org.mockito.Mockito.verify;
import static org.mockito.Mockito.verifyNoInteractions;
import static org.mockito.Mockito.verifyNoMoreInteractions;

@ExtendWith(MockitoExtension.class)
class ScannerTaskSetServiceTest {
    @Mock
    private TaskSetPublisher mockPublisher;
    @Mock
    private SnmpConfigService configService;

    @InjectMocks
    private ScannerTaskSetService service;
    @Captor
    ArgumentCaptor<List<TaskDefinition>> taskListCaptor;
    private final String tenantId = "testTenant";
    private final String location = "testLocation";
    private IpInterface ipInterface1;
    private IpInterface ipInterface2;

    private Node node1;
    private Node node2;
    private Node node3;

    @BeforeEach
    void prepareTest() {
        ipInterface1 = new IpInterface();
        ipInterface1.setIpAddress(InetAddressUtils.getInetAddress("127.0.0.1"));
        ipInterface1.setSnmpPrimary(true);

        ipInterface2 = new IpInterface();
        ipInterface2.setIpAddress(InetAddressUtils.getInetAddress("127.0.0.1"));
        ipInterface2.setSnmpPrimary(false);

        node1 = new DefaultNode();
        node1.setId(1L);
        node1.setIpInterfaces(List.of(ipInterface1, ipInterface2));

        node2 = new DefaultNode();
        node2.setId(2L);
        node2.setIpInterfaces(List.of(ipInterface2));

        node3 = new DefaultNode();
    }

    @AfterEach
    void afterTest() {
        verifyNoMoreInteractions(mockPublisher);
    }

    @Test
    void testSendNodeScanWithTwoIpInterfaces() throws InvalidProtocolBufferException {
        service.sendNodeScannerTask(List.of(node1), location, tenantId);
        verify(mockPublisher).publishNewTasks(eq(tenantId), eq(location), taskListCaptor.capture());
        List<TaskDefinition> tasks = taskListCaptor.getValue();
        assertThat(tasks).asList().hasSize(1)
            .extracting("nodeId_").containsExactly(node1.getId());
        NodeScanRequest request = tasks.get(0).getConfiguration().unpack(NodeScanRequest.class);
        assertThat(request).extracting(NodeScanRequest::getNodeId, NodeScanRequest::getPrimaryIp)
            .containsExactly(node1.getId(), InetAddressUtils.toIpAddrString(ipInterface1.getIpAddress()));
    }

    @Test
    void testSendNodeScanWithIpInterfaceNonPrimary() throws InvalidProtocolBufferException {
        service.sendNodeScannerTask(List.of(node2), location, tenantId);
        verify(mockPublisher).publishNewTasks(eq(tenantId), eq(location), taskListCaptor.capture());
        List<TaskDefinition> tasks = taskListCaptor.getValue();
        assertThat(tasks).asList().hasSize(1)
            .extracting("nodeId_").containsExactly(node2.getId());
        NodeScanRequest request = tasks.get(0).getConfiguration().unpack(NodeScanRequest.class);
        assertThat(request).extracting(NodeScanRequest::getNodeId, NodeScanRequest::getPrimaryIp)
            .containsExactly(node2.getId(), InetAddressUtils.toIpAddrString(ipInterface2.getIpAddress()));
    }

    @Test
    void testSendNodeScanWithoutIpInterfaces() {
        service.sendNodeScannerTask(List.of(node3), location, tenantId);
        verifyNoInteractions(mockPublisher);
    }
}
